--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
