--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 #sidebar {
@@ -15,7 +16,22 @@ body {
   margin-top: 20px;
 }
 
+.data-label {
+  margin: 0;
+  font-size: 12px;
+  font-weight: bold;
+  color: #333;
+}
+
+.project-data-item {
+  margin: 5px 0;
+  padding: 0 10px;
+  font-size: 14px;
+  word-break: break-all;
+}
+
 .btn {
+  font-family: inherit;
   width: 75%;
   margin: 10px 0;
   border: none;
@@ -25,7 +41,6 @@ body {
   box-shadow: 2px 2px 2px #ccc;
   transition: all .2s ease-in;
   font-size: 15px;
-  /* font-weight: 700; */
   justify-self: end;
   user-select: none;
   position: relative;
@@ -39,13 +54,13 @@ body {
 }
 
 .btn:hover {
-    cursor: pointer;
-    box-shadow: 2px 2px 2px #999;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px #999;
 }
 
 .btn:active {
-    cursor: pointer;
-    box-shadow: 2px 2px 2px #ddd;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px #ddd;
 }
 
 .btn.user-action {
@@ -135,10 +150,10 @@ body {
 
 .separator {
   margin: 10px 0;
-  border: 1px solid rgba(0, 0, 0, .25);
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
   width: 80%;
 }
 
 #flow-canvas {
-  border: 3px solid chartreuse;
+  border-left: 1px solid rgba(0, 0, 0, 0.25);
 }
